
[tool.poetry]
packages = [
    { include = "page_loader" }
]

name = "yerkebulanali-page_loader"
version = "0.0.1"
description = "Web page loader"
authors = ["Yerkebulan <yerkebulanali@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
beautifulsoup4 = ""^4.8.2"
progress = "^1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest-cov = "^2.10.0"

[tool.poetry.scripts]
gendiff = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"